# rofi-notion

./: .gitignore  .python-version  LICENSE  Makefile  PKGBUILD  README.md  __main__.py  main.py  pyproject.toml  requirements.txt  rofi-notion.spec  setup.py  stub.py  todo.md  transcoders.py
.github/workflows/: publish.yml  release.yml
rofi_notion/: __main__.py  config.py  main.py  manage.py  settings.py  transcoders.py
